--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,24 @@
 cmake_minimum_required(VERSION 3.12)
 include(pico_sdk_import.cmake)
 
-project(light_util C CXX ASM)
+project(light_common C CXX ASM)
 
 pico_sdk_init()
 
 add_subdirectory(demo)
 
-add_library(light_util INTERFACE)
+add_library(light_common INTERFACE)
 
 target_include_directories(
-    light_util
+    light_common
     INTERFACE
     ${CMAKE_CURRENT_LIST_DIR}/include
 )
 
 target_sources(
-    light_util
+    light_common
     INTERFACE
-    ${CMAKE_CURRENT_LIST_DIR}/src/light_util.c
+    ${CMAKE_CURRENT_LIST_DIR}/src/light_common.c
     ${CMAKE_CURRENT_LIST_DIR}/src/list.c
 )
 
@@ -31,13 +31,13 @@ else()
 endif()
 
 target_compile_definitions(
-    light_util INTERFACE
+    light_common INTERFACE
     RUN_MODE=${LIGHT_RUN_MODE}
 )
 if(DEFINED COMPILE_LOG_LEVEL)
     message("COMPILE_LOG_LEVEL is set to ${COMPILE_LOG_LEVEL}")
     target_compile_definitions(
-        light_util
+        light_common
         INTERFACE
         FILTER_LOG_LEVEL=${COMPILE_LOG_LEVEL}
     )
@@ -45,7 +45,7 @@ endif()
 
 if(DEFINED LIGHT_API_TRACE)
     target_compile_definitions(
-        light_util
+        light_common
         INTERFACE
         LIGHT_API_TRACE
     )
@@ -53,7 +53,7 @@ endif()
 
 # pico_platform must be linked to correctly define PICO_RP2040 in on-device builds
 target_link_libraries(
-    light_util
+    light_common
     INTERFACE
     pico_platform
 )
